--- a/DAN_XLII_Andreja_Kolesar/DAN_XLII_Andreja_Kolesar.csproj
+++ b/DAN_XLII_Andreja_Kolesar/DAN_XLII_Andreja_Kolesar.csproj
@@ -35,8 +35,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,6 +64,37 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Service\Model_DAN_XLII.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model_DAN_XLII.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Service\Model_DAN_XLII.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Service\Model_DAN_XLII.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model_DAN_XLII.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Service\Service.cs" />
+    <Compile Include="Service\tblEmployee.cs">
+      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Service\tblGender.cs">
+      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Service\tblLocation.cs">
+      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Service\tblSector.cs">
+      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Service\vwEmployee.cs">
+      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -86,13 +126,41 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <EntityDeploy Include="Service\Model_DAN_XLII.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model_DAN_XLII.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Service\Model_DAN_XLII.edmx.diagram">
+      <DependentUpon>Model_DAN_XLII.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\Model_DAN_XLII.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Model_DAN_XLII.Context.cs</LastGenOutput>
+      <DependentUpon>Model_DAN_XLII.edmx</DependentUpon>
+    </Content>
+    <Content Include="Service\Model_DAN_XLII.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model_DAN_XLII.edmx</DependentUpon>
+      <LastGenOutput>Model_DAN_XLII.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="ViewModel\" />
+    <Folder Include="View\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
