--- a/DAN_XLII_Andreja_Kolesar/DAN_XLII_Andreja_Kolesar.csproj
+++ b/DAN_XLII_Andreja_Kolesar/DAN_XLII_Andreja_Kolesar.csproj
@@ -64,37 +64,40 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Service\Model_DAN_XLII.Context.cs">
+    <Compile Include="Command\RelayCommand.cs" />
+    <Compile Include="Service\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model_DAN_XLII.Context.tt</DependentUpon>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Service\Model_DAN_XLII.cs">
+    <Compile Include="Service\Model1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Service\Model_DAN_XLII.Designer.cs">
+    <Compile Include="Service\Model1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model_DAN_XLII.edmx</DependentUpon>
+      <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Service\Service.cs" />
     <Compile Include="Service\tblEmployee.cs">
-      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Service\tblGender.cs">
-      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Service\tblLocation.cs">
-      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Service\tblSector.cs">
-      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Service\vwEmployee.cs">
-      <DependentUpon>Model_DAN_XLII.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="View\MainWindowViewModel.cs" />
+    <Compile Include="View\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -131,28 +134,19 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <EntityDeploy Include="Service\Model_DAN_XLII.edmx">
+    <EntityDeploy Include="Service\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model_DAN_XLII.Designer.cs</LastGenOutput>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Service\Model_DAN_XLII.edmx.diagram">
-      <DependentUpon>Model_DAN_XLII.edmx</DependentUpon>
+    <None Include="Service\Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Service\Model_DAN_XLII.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model_DAN_XLII.Context.cs</LastGenOutput>
-      <DependentUpon>Model_DAN_XLII.edmx</DependentUpon>
-    </Content>
-    <Content Include="Service\Model_DAN_XLII.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model_DAN_XLII.edmx</DependentUpon>
-      <LastGenOutput>Model_DAN_XLII.cs</LastGenOutput>
-    </Content>
+    <Resource Include="Lokacije.txt" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -160,7 +154,18 @@
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="ViewModel\" />
-    <Folder Include="View\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Service\Model1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Service\Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
