--- a/DAN_XLII_Andreja_Kolesar/App.config
+++ b/DAN_XLII_Andreja_Kolesar/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="EmployeeSystemEntities" connectionString="metadata=res://*/Service.Model_DAN_XLII.csdl|res://*/Service.Model_DAN_XLII.ssdl|res://*/Service.Model_DAN_XLII.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVK117\SQLEXPRESS;initial catalog=EmployeeSystem;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EmployeeEntities" connectionString="metadata=res://*/Service.Model1.csdl|res://*/Service.Model1.ssdl|res://*/Service.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVK117\SQLEXPRESS;initial catalog=EmployeeSystem;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
